<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.albumapp.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:orderInCategory="140"
        app:showAsAction="ifRoom|withText"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:orderInCategory="140"
        app:showAsAction="ifRoom|withText"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/sub_asc_order"
                app:showAsAction="never"
                android:title="@string/ascending"/>
            <item
                android:id="@+id/sub_desc_order"
                app:showAsAction="never"
                android:title="@string/descending"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_layout_type"
        app:showAsAction="never"
        android:title="@string/layout_options">
        <menu>
            <item
                android:id="@+id/sub_has_date"
                app:showAsAction="never"
                android:title="@string/has_date"/>
            <item
                android:id="@+id/sub_no_date"
                app:showAsAction="never"
                android:title="@string/no_date"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_multi_language"
        app:showAsAction="never"
        android:title="@string/change_lang">
    </item>

    <item
        android:id="@+id/action_more_vert"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:orderInCategory="140"
        app:showAsAction="ifRoom|withText"
        android:title="@string/more"/>

</menu>