<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_setPin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/set_pin"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_deletePin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/delete_pin"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_changePin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/change_pin"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</ScrollView>